ide/src/tests/icfg/snapshots/ide__tests__icfg__convert2__test_ir_overwrite_return_values_dot.snap
---
source: src/tests/icfg/convert2.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:taut] (4) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (3) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (2) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 0) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Call(mytest, [0], [0])};
\node[circle,fill,inner sep=1pt,label=left:taut] (15) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (12) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (9) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (7) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (6) at (3, 0) { };
\node[font=\tiny] (note_2) at (1.5, 0.5) {Const(0, 2.0)};
\node[font=\tiny] (note_3) at (1.5, 1.5) {Const(1, 3.0)};
\node[font=\tiny] (note_4) at (1.5, 2.5) {Return([1])};
		\path[->] (0) edge (2);
		\path[->] (6) edge (9);
		\path[->] (9) edge (12);
		\path[->] (12) edge (15);
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->] (0) edge (3);
		\path[->, blue] (0) [bend right] edge  node { } (3);
		\path[->, blue] (0) [bend right] edge  node { } (2);
		\path[->, blue] (7) [loop right] edge  node { } (7);
		\path[->, blue] (6) [loop right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (6) [bend right] edge  node { } (9);
		\path[->, blue] (6) [bend right] edge  node { } (12);
		\path[->, blue] (6) [bend right] edge  node { } (15);


                \end{tikzpicture}
            \end{document}
