ide/src/tests/icfg/snapshots/ide__tests__icfg__convert2__test_ir_return_branches_dot.snap
---
source: src/tests/icfg/convert2.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:\%1] (64) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (38) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (7) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (5) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (4) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (3) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 0) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 5.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Call(mytest, [0], [1])};
\node[circle,fill,inner sep=1pt,label=left:\%0] (61) at (5, 12) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (60) at (5, 10) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (59) at (5, 11) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (58) at (5, 6) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (57) at (5, 10) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (56) at (5, 5) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (55) at (5, 9) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (54) at (5, 4) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (53) at (5, 8) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (52) at (5, 3) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (51) at (5, 7) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (50) at (5, 2) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (49) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (47) at (4, 12) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (46) at (4, 11) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (45) at (4, 10) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (44) at (4, 8) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (43) at (4, 10) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (42) at (4, 6) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (41) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (40) at (4, 7) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (39) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (37) at (4, 12) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (36) at (4, 11) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (35) at (4, 10) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (34) at (4, 9) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (33) at (4, 8) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (32) at (4, 7) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (31) at (4, 6) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (30) at (4, 5) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (29) at (4, 4) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (28) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (27) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (26) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (25) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (24) at (4, 12) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (23) at (4, 11) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (22) at (4, 10) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (21) at (4, 9) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (20) at (4, 8) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (19) at (4, 7) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (18) at (4, 6) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (17) at (4, 5) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (16) at (4, 4) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (15) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (14) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (13) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (12) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (9) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (8) at (4, 0) { };
\node[font=\tiny] (note_2) at (2.5, 0.5) {Const(1, 1.0)};
\node[font=\tiny] (note_3) at (2.5, 1.5) {Conditional(1, [1, 2])};
\node[font=\tiny] (note_4) at (2.5, 2.5) {Block(1)};
\node[font=\tiny] (note_5) at (2.5, 3.5) {Const(1, 2.0)};
\node[font=\tiny] (note_6) at (2.5, 4.5) {Const(2, 3.0)};
\node[font=\tiny] (note_7) at (2.5, 5.5) {Return([1])};
\node[font=\tiny] (note_8) at (2.5, 6.5) {Jump(3)};
\node[font=\tiny] (note_9) at (2.5, 7.5) {Block(2)};
\node[font=\tiny] (note_10) at (2.5, 8.5) {Const(2, 4.0)};
\node[font=\tiny] (note_11) at (2.5, 9.5) {Jump(3)};
\node[font=\tiny] (note_12) at (2.5, 10.5) {Block(3)};
\node[font=\tiny] (note_13) at (2.5, 11.5) {Return([0])};
\node[font=\tiny] (note_14) at (2.5, 0.5) {Const(1, 1.0)};
\node[font=\tiny] (note_15) at (2.5, 1.5) {Conditional(1, [1, 2])};
\node[font=\tiny] (note_16) at (2.5, 2.5) {Block(1)};
\node[font=\tiny] (note_17) at (2.5, 3.5) {Const(1, 2.0)};
\node[font=\tiny] (note_18) at (2.5, 4.5) {Const(2, 3.0)};
\node[font=\tiny] (note_19) at (2.5, 5.5) {Return([1])};
\node[font=\tiny] (note_20) at (2.5, 6.5) {Jump(3)};
\node[font=\tiny] (note_21) at (2.5, 7.5) {Block(2)};
\node[font=\tiny] (note_22) at (2.5, 8.5) {Const(2, 4.0)};
\node[font=\tiny] (note_23) at (2.5, 9.5) {Jump(3)};
\node[font=\tiny] (note_24) at (2.5, 10.5) {Block(3)};
\node[font=\tiny] (note_25) at (2.5, 11.5) {Return([0])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (8) [bend right] edge  node { } (12);
		\path[->, blue] (8) [bend right] edge  node { } (13);
		\path[->, blue] (8) [bend right] edge  node { } (14);
		\path[->, blue] (8) [bend right] edge  node { } (15);
		\path[->, blue] (8) [bend right] edge  node { } (16);
		\path[->, blue] (8) [bend right] edge  node { } (17);
		\path[->, blue] (8) [bend right] edge  node { } (18);
		\path[->, blue] (8) [bend right] edge  node { } (19);
		\path[->, blue] (8) [bend right] edge  node { } (20);
		\path[->, blue] (8) [bend right] edge  node { } (21);
		\path[->, blue] (8) [bend right] edge  node { } (22);
		\path[->, blue] (8) [bend right] edge  node { } (23);
		\path[->, blue] (8) [bend right] edge  node { } (24);
		\path[->, blue] (9) [loop right] edge  node { } (9);
		\path[->, blue] (0) [bend right] edge  node { } (38);
		\path[->, blue] (9) [bend right] edge  node { } (49);
		\path[->, blue] (9) [bend right] edge  node { } (50);
		\path[->, blue] (9) [bend right] edge  node { } (51);
		\path[->, blue] (9) [bend right] edge  node { } (52);
		\path[->, blue] (9) [bend right] edge  node { } (53);
		\path[->, blue] (9) [bend right] edge  node { } (54);
		\path[->, blue] (9) [bend right] edge  node { } (55);
		\path[->, blue] (9) [bend right] edge  node { } (56);
		\path[->, blue] (9) [bend right] edge  node { } (57);
		\path[->, blue] (9) [bend right] edge  node { } (58);
		\path[->, blue] (9) [bend right] edge  node { } (59);
		\path[->, blue] (9) [bend right] edge  node { } (61);
		\path[->, blue] (0) [bend right] edge  node { } (64);
		\path[->] (0) edge (3);
		\path[->] (3) edge (4);
		\path[->] (4) edge (5);
		\path[->] (0) edge (7);
		\path[->] (8) edge (12);
		\path[->] (12) edge (13);
		\path[->] (13) edge (14);
		\path[->] (14) edge (15);
		\path[->] (15) edge (16);
		\path[->] (16) edge (17);
		\path[->] (17) edge (18);
		\path[->] (18) edge (19);
		\path[->] (19) edge (20);
		\path[->] (20) edge (21);
		\path[->] (21) edge (22);
		\path[->] (22) edge (23);
		\path[->] (23) edge (24);
		\path[->] (8) edge (25);
		\path[->] (25) edge (26);
		\path[->] (26) edge (27);
		\path[->] (27) edge (28);
		\path[->] (28) edge (29);
		\path[->] (29) edge (30);
		\path[->] (30) edge (31);
		\path[->] (31) edge (32);
		\path[->] (32) edge (33);
		\path[->] (33) edge (34);
		\path[->] (34) edge (35);
		\path[->] (35) edge (36);
		\path[->] (36) edge (37);
		\path[->] (7) edge node { } (38);
		\path[->, bend right] (13) edge (39);
		\path[->, bend right] (13) edge (40);
		\path[->] (14) edge (41);
		\path[->] (17) edge (42);
		\path[->, bend right] (18) edge (43);
		\path[->] (19) edge (44);
		\path[->, bend right] (21) edge (45);
		\path[->] (22) edge (46);
		\path[->] (23) edge (47);
		\path[->] (9) edge (49);
		\path[->, bend right] (49) edge (50);
		\path[->, bend right] (49) edge (51);
		\path[->] (50) edge (52);
		\path[->] (51) edge (53);
		\path[->] (52) edge (54);
		\path[->] (53) edge (55);
		\path[->] (54) edge (56);
		\path[->, bend right] (55) edge (57);
		\path[->] (56) edge (58);
		\path[->] (57) edge (59);
		\path[->, bend right] (58) edge (60);
		\path[->] (59) edge (61);


                \end{tikzpicture}
            \end{document}
