ide/src/tests/icfg/snapshots/ide__tests__icfg__convert2__test_ir_return_dot.snap
---
source: src/tests/icfg/convert2.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:\%0] (8) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (6) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (5) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (4) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (3) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 0) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Call(mytest, [0], [0, 1])};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Const(1, 2.0)};
\node[circle,fill,inner sep=1pt,label=left:taut] (20) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (19) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (18) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (17) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (16) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (15) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (14) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (13) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (12) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (10) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (9) at (4, 0) { };
\node[font=\tiny] (note_3) at (2.5, 0.5) {Const(0, 2.0)};
\node[font=\tiny] (note_4) at (2.5, 1.5) {Const(1, 3.0)};
\node[font=\tiny] (note_5) at (2.5, 2.5) {Return([0, 1])};
\node[font=\tiny] (note_6) at (2.5, 0.5) {Const(0, 2.0)};
\node[font=\tiny] (note_7) at (2.5, 1.5) {Const(1, 3.0)};
\node[font=\tiny] (note_8) at (2.5, 2.5) {Return([0, 1])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (9) [bend right] edge  node { } (12);
		\path[->, blue] (9) [bend right] edge  node { } (13);
		\path[->, blue] (9) [bend right] edge  node { } (14);
		\path[->, blue] (9) [bend right] edge  node { } (15);
		\path[->, blue] (10) [loop right] edge  node { } (10);
		\path[->] (0) edge (3);
		\path[->] (3) edge (4);
		\path[->] (4) edge (5);
		\path[->] (5) edge (6);
		\path[->] (0) edge (8);
		\path[->] (9) edge (12);
		\path[->] (12) edge (13);
		\path[->] (13) edge (14);
		\path[->] (14) edge (15);
		\path[->] (9) edge (16);
		\path[->] (16) edge (17);
		\path[->] (17) edge (18);
		\path[->] (18) edge (19);
		\path[->] (14) edge (20);


                \end{tikzpicture}
            \end{document}
