ide/src/tests/icfg/snapshots/ide__tests__icfg__convert2__test_ir_return_passed_value_dot.snap
---
source: src/tests/icfg/convert2.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:\%0] (7) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (6) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (4) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (3) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 0) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Call(mytest, [0], [1])};
\node[circle,fill,inner sep=1pt,label=left:\%0] (13) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (12) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (10) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (9) at (4, 0) { };
\node[font=\tiny] (note_2) at (2.5, 0.5) {Return([0])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->] (0) edge (4);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (3);
		\path[->, blue] (10) [loop right] edge  node { } (10);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (9) [loop right] edge  node { } (9);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (10) [bend right] edge  node { } (13);
		\path[->, blue] (9) [bend right] edge  node { } (12);
		\path[->] (0) edge (3);
		\path[->] (10) edge (13);
		\path[->] (9) edge (12);


                \end{tikzpicture}
            \end{document}
