ide/src/tests/icfg/snapshots/ide__tests__icfg__convert2__test_ir_return_values2_dot.snap
---
source: src/tests/icfg/convert2.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:\%2] (15) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (13) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (12) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (9) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (8) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (5) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (4) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 0) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Const(1, 2.0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Call(mytest, [0], [2])};
\node[circle,fill,inner sep=1pt,label=left:\%0] (23) at (6, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (22) at (5, 2) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (20) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (19) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (17) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (16) at (5, 0) { };
\node[font=\tiny] (note_3) at (3.5, 0.5) {Const(1, 3.0)};
\node[font=\tiny] (note_4) at (3.5, 1.5) {Return([0])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->] (0) edge (5);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (9);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (17) [loop right] edge  node { } (17);
		\path[->, blue] (0) [bend right] edge  node { } (13);
		\path[->, blue] (16) [loop right] edge  node { } (16);
		\path[->, blue] (0) [bend right] edge  node { } (12);
		\path[->, blue] (17) [bend right] edge  node { } (20);
		\path[->, blue] (16) [bend right] edge  node { } (19);
		\path[->, blue] (17) [bend right] edge  node { } (23);
		\path[->, blue] (16) [bend right] edge  node { } (22);
		\path[->, blue] (0) [bend right] edge  node { } (15);
		\path[->] (0) edge (4);
		\path[->] (5) edge (9);
		\path[->] (5) edge (9);
		\path[->] (4) edge (8);
		\path[->] (17) edge (20);
		\path[->] (16) edge (19);
		\path[->] (20) edge (23);
		\path[->] (19) edge (22);


                \end{tikzpicture}
            \end{document}
