ide/src/tests/icfg/snapshots/ide__tests__icfg__convert2__test_ir_return_values_dot.snap
---
source: src/tests/icfg/convert2.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 0) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (2) at (0, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (1) at (1, 2) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (9) at (0, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (8) at (1, 3) {};
\node[font=\tiny] (note_0) at (-1.5, -0.5) {};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Const(0, 1.0)};
\node[font=\tiny] (note_6) at (-1.5, 2.5) {Call(mytest, [0], [1])};
\node[circle,fill,inner sep=1pt,label=left:taut] (4) at (4, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (3) at (5, 1) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (5) at (4, 2) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (6) at (4, 3) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (7) at (4, 4) {};
\node[font=\tiny] (note_2) at (2.5, 0.5) {};
\node[font=\tiny] (note_3) at (2.5, 1.5) {Const(0, 2.0)};
\node[font=\tiny] (note_4) at (2.5, 2.5) {Const(1, 3.0)};
\node[font=\tiny] (note_5) at (2.5, 3.5) {Return([1])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (2);
		\path[->, blue] (0) [bend right] edge  node { } (1);
		\path[->, blue] (4) [loop right] edge  node { } (4);
		\path[->, blue] (4) [bend right] edge  node { } (3);
		\path[->, blue] (4) [bend right] edge  node { } (5);
		\path[->, blue] (4) [bend right] edge  node { } (6);
		\path[->, blue] (4) [bend right] edge  node { } (7);
		\path[->, red] (4) [bend left] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (9);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, red] (0) [bend left] edge  node { } (9);
		\path[->, red] (0) [bend left] edge  node { } (8);


                \end{tikzpicture}
            \end{document}
