ide/src/tests/icfg/snapshots/ide__tests__icfg__convert2__test_ir_self_loop_dot.snap
---
source: src/tests/icfg/convert2.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:taut] (44) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (40) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (32) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (25) at (1, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (24) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (20) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (16) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (13) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (12) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (9) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (8) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (1) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 1) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(2, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Const(0, 5.0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Call(test, [0], [1])};
\node[font=\tiny] (note_3) at (-1.5, 3.5) {Assign(0, 1)};
\node[font=\tiny] (note_4) at (-1.5, 4.5) {Return([0])};
\node[font=\tiny] (note_5) at (-1.5, 0.5) {Const(2, 1.0)};
\node[font=\tiny] (note_6) at (-1.5, 1.5) {Const(0, 5.0)};
\node[font=\tiny] (note_7) at (-1.5, 2.5) {Call(test, [0], [1])};
\node[font=\tiny] (note_8) at (-1.5, 3.5) {Assign(0, 1)};
\node[font=\tiny] (note_9) at (-1.5, 4.5) {Return([0])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->] (0) edge (9);
		\path[->, blue] (0) [bend right] edge  node { } (9);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (25) [loop right] edge  node { } (25);
		\path[->, blue] (0) [bend right] edge  node { } (13);
		\path[->, blue] (24) [loop right] edge  node { } (24);
		\path[->, blue] (0) [bend right] edge  node { } (12);
		\path[->, blue] (25) [bend right] edge  node { } (1);
		\path[->, blue] (24) [bend right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (16);
		\path[->, blue] (0) [bend right] edge  node { } (40);
		\path[->, blue] (24) [bend right] edge  node { } (8);
		\path[->, blue] (24) [bend right] edge  node { } (32);
		\path[->, blue] (0) [bend right] edge  node { } (20);
		\path[->, blue] (0) [bend right] edge  node { } (44);


                \end{tikzpicture}
            \end{document}
