ide/src/tests/icfg/snapshots/ide__tests__icfg__convert2__test_ir_table_dot.snap
---
source: src/tests/icfg/convert2.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 2) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (2) at (0, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (1) at (1, 3) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (4) at (0, 4) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (3) at (1, 4) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (6) at (0, 5) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (5) at (1, 5) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (8) at (0, 6) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (7) at (1, 6) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (10) at (0, 7) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (9) at (1, 7) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (12) at (0, 8) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (11) at (1, 8) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (14) at (0, 9) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (13) at (1, 9) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (16) at (0, 10) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (15) at (1, 10) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (18) at (0, 11) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (17) at (1, 11) {};
\node[font=\tiny] (note_0) at (-1.5, 2.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 3.5) {Const(1, 2.0)};
\node[font=\tiny] (note_2) at (-1.5, 4.5) {Const(2, 3.0)};
\node[font=\tiny] (note_3) at (-1.5, 5.5) {Block(1)};
\node[font=\tiny] (note_4) at (-1.5, 6.5) {Const(1, 2.0)};
\node[font=\tiny] (note_5) at (-1.5, 7.5) {Const(2, 3.0)};
\node[font=\tiny] (note_6) at (-1.5, 8.5) {Block(2)};
\node[font=\tiny] (note_7) at (-1.5, 9.5) {Const(2, 4.0)};
\node[font=\tiny] (note_8) at (-1.5, 10.5) {Table([0, 1, 2, 2])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (2);
		\path[->, blue] (0) [bend right] edge  node { } (1);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (3);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (10);
		\path[->, blue] (0) [bend right] edge  node { } (9);
		\path[->, blue] (0) [bend right] edge  node { } (12);
		\path[->, blue] (0) [bend right] edge  node { } (11);
		\path[->, blue] (0) [bend right] edge  node { } (14);
		\path[->, blue] (0) [bend right] edge  node { } (13);
		\path[->, blue] (0) [bend right] edge  node { } (16);
		\path[->, blue] (0) [bend right] edge  node { } (15);
		\path[->, blue] (0) [bend right] edge  node { } (18);
		\path[->, blue] (0) [bend right] edge  node { } (17);
		\path[->, red] (0) [bend left] edge  node { } (18);
		\path[->, red] (0) [bend left] edge  node { } (17);


                \end{tikzpicture}
            \end{document}
