ide/src/tests/icfg/snapshots/ide__tests__icfg__convert2__test_ir_unop_dot.snap
---
source: src/tests/icfg/convert2.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:\%1] (11) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (10) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (9) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:\%1] (8) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (7) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (6) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (4) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (3) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 0) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Unop(1, 0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Unop(1, 0)};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->] (0) edge (4);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (3);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (10);
		\path[->, blue] (0) [bend right] edge  node { } (11);
		\path[->, blue] (0) [bend right] edge  node { } (9);


                \end{tikzpicture}
            \end{document}
